--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="publications.html" class="image"><img src="images/pic18.jpg" alt="" /></a>
+											<h3>Publications on vectors, querying and sustainability</h3>
+											<p>New articles published in <i>ADBIS</i> and <i>CompSysTech</i> present novel querying methods, data warehouse sustainability enhancements, and managing complex vector data.</p>
+										</article>
+										<article>
 											<a href="publications.html" class="image"><img src="images/pic17.jpg" alt="" /></a>
 											<h3>Publication: enhanced SQL error messages</h3>
 											<p>A new article published in <i>Empirical Software Engineering</i> shows evidence on the benefits of enhanced compiler error messages on error recovery.</p>
