--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,30 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</thead>
 											<tbody>
 												<tr>
+													<td>Querying</td>
+													<td><a target="_blank" href="https://link.springer.com/chapter/10.1007/978-3-032-05727-3_7">Querying Property Graphs with XPath</a></td>
+													<td><a href="pdf/2025_xpath.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Vectors</td>
+													<td><a target="_blank" href="https://link.springer.com/chapter/10.1007/978-3-032-05281-0_18">Vector Representations of Multi-modal Data</a></td>
+													<td><a href="pdf/2025_multimodal.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Vectors</td>
+													<td><a target="_blank" href="https://link.springer.com/chapter/10.1007/978-3-032-05727-3_19">Vector Databases and Language Models: Synergies and Challenges</a></td>
+													<td><a href="pdf/2025_synergies.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Sustainability</td>
+													<td><a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/11137305">Lazy Minimal Data Warehouse Refresh</a></td>
+													<td><a href="pdf/2025_lazy.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
 													<td>Compilers</td>
 													<td><a target="_blank" href="https://link.springer.com/article/10.1007/s10664-025-10695-1">Enhanced SQL error messages facilitate faster error fixing</a></td>
 													<td><a href="pdf/2025_iteration.pdf" class="fas fa-file-pdf"></a></td>
@@ -116,7 +140,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 													<td></td>
 												</tr>
 												<tr>
-													<td>Fundamentals</td>
+													<td>Vectors</td>
 													<td><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093">Vector database management systems: Fundamental concepts, use-cases, and current challenges</a></td>
 													<td><a href="pdf/2024_vector.pdf" class="fas fa-file-pdf"></a></td>
 													<td><audio style="width:200px;height:32px" controls>
@@ -155,7 +179,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 													<td></td>
 												</tr>
 												<tr>
-													<td>Fundamentals</td>
+													<td>Querying</td>
 													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3596673.3603142">SQL: A Trojan Horse Hiding a Decathlon of Complexities</a></td>
 													<td><a href="pdf/2023_sql.pdf" class="fas fa-file-pdf"></a></td>
 													<td></td>
