--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="publications.html" class="image"><img src="images/pic19.jpg" alt="" /></a>
+											<h3>Publication: decision support system sustainability</h3>
+											<p>A new article published in <i>Information Systems</i> studies the effects of following database design practices on sustainability in decision support systems.</p>
+										</article>
+										<article>
 											<a href="publications.html" class="image"><img src="images/pic18.jpg" alt="" /></a>
 											<h3>Publications on vectors, querying and sustainability</h3>
-											<p>New articles published in <i>ADBIS</i> and <i>CompSysTech</i> present novel querying methods, data warehouse sustainability enhancements, and managing complex vector data.</p>
+											<p>New articles published in <i>ADBIS</i> and <i>CompSysTech</i> present novel querying methods, data warehouse sustainability enhancements, and ways of managing complex vector data.</p>
 										</article>
 										<article>
 											<a href="publications.html" class="image"><img src="images/pic17.jpg" alt="" /></a>
@@ -158,7 +163,7 @@
 										<article>
 											<a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684/6738" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3>Publication: transparent ownership chains</h3>
-											<p>A new publication shows how to make media ownership chains transparent by utilizing recursive queries.</p>
+											<p>A new publication shows how to make company ownership chains transparent by utilizing recursive queries.</p>
 										</article>
 										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3703922.3703932" class="image"><img src="images/pic06.jpg" alt="" /></a>
