--- a/people.html
+++ b/people.html
@@ -32,7 +32,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<article>
 											<span class="icon solid fa-user-circle"></span>
 											<div class="content">
-												<h3>Bingxiang Chen</h3>
+												<h3><a target="_blank" href="https://dblp.org/pid/404/9489.html">Bingxiang Chen</a></h3>
 												<p>Current research focuses on the intersection of databases, AI, and retrieval-augmented generation.</p>
 											</div>
 										</article>
