--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,12 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</thead>
 											<tbody>
 												<tr>
+													<td>Sustainability</td>
+													<td><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S030643792500122X">The effects of database normalization on decision support system performance</a></td>
+													<td><a href="pdf/2025_tpc.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
 													<td>Querying</td>
 													<td><a target="_blank" href="https://link.springer.com/chapter/10.1007/978-3-032-05727-3_7">Querying Property Graphs with XPath</a></td>
 													<td><a href="pdf/2025_xpath.pdf" class="fas fa-file-pdf"></a></td>
