--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,10 @@ https://fontawesome.com/v5/search?o=r&s=solid
 													<td>Sustainability</td>
 													<td><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S030643792500122X">The effects of database normalization on decision support system performance</a></td>
 													<td><a href="pdf/2025_tpc.pdf" class="fas fa-file-pdf"></a></td>
-													<td></td>
+													<td><audio style="width:200px;height:32px" controls>
+														  <source src="audio/2025_tpch.mp3" type="audio/mp3">Your browser does not support the audio element.
+														  </audio>
+													</td>
 												</tr>
 												<tr>
 													<td>Querying</td>
