--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="people.html" class="image"><img src="images/pic20.jpg" alt="" /></a>
+											<h3>New researchers</h3>
+											<p>Researcher Ville Heikkilä and PhD researcher Imanda Ramanayake join the DBS research group!</p>
+										</article>
+										<article>
 											<a href="publications.html" class="image"><img src="images/pic19.jpg" alt="" /></a>
 											<h3>Publication: decision support system sustainability</h3>
 											<p>A new article published in <i>Information Systems</i> studies the effects of following database design practices on sustainability in decision support systems.</p>
