--- a/people.html
+++ b/people.html
@@ -39,6 +39,13 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<article>
 											<span class="icon solid fa-user-circle"></span>
 											<div class="content">
+												<h3><a target="_blank" href="https://dblp.org/pid/51/7904.html">Ville Heikkilä</a></h3>
+												<p>Current research focuses on data-intensive software engineering.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
 												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
 												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
 											</div>
@@ -48,6 +55,13 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											<div class="content">
 												<h3>Nea Peltola</h3>
 												<p>Current research focuses on data systems industry and education.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
+												<h3>Imanda Ramanayake</h3>
+												<p>Current research focuses on database benchmarking.</p>
 											</div>
 										</article>
 										<article>
