--- a/people.html
+++ b/people.html
@@ -54,7 +54,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											<span class="icon solid fa-user-circle"></span>
 											<div class="content">
 												<h3>Nea Peltola</h3>
-												<p>Current research focuses on data systems industry and education.</p>
+												<p>Current research focuses on sustainable data systems and data systems education.</p>
 											</div>
 										</article>
 										<article>
